page bons plans terminée

--- a/bons plans.html
+++ b/bons plans.html
@@ -18,7 +18,8 @@
         </a>
         <div id="compte_agence">
             <a href="mon compte.html"><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
-            <a href="#nous_trouver"><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
+            <a href="#nous_trouver"><img src="img/geolocalisation.jpg" alt="geolocalisation"
+                    title="geolocalisation">Agences</a>
         </div>
         <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
         <div class="break"></div>
@@ -29,7 +30,8 @@
             <input type="checkbox" name="mobile" id="mobile" role="button">
             <div id="menu_cache">
                 <ul>
-                    <li><a href="mon compte.html" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon compte</a></li>
+                    <li><a href="mon compte.html" class="bouton_lien"><img src="img/contacts.png" alt="compte">Mon
+                            compte</a></li>
                     <li><a href="croisiere.html" class="bouton_lien">Croisières</a></li>
                     <li><a href="sejour.html" class="bouton_lien">Séjour</a></li>
                     <li><a href="camping.html" class="bouton_lien">Camping</a></li>
@@ -44,7 +46,8 @@
                         </ul>
                     </li>
                     <li><a href="bons plans.html" class="bouton_lien">Bons&nbsp;plans</a></li>
-                    <li><a href="tel:+33948141516" class="bouton_lien bouton_telephone"><img src="img/telephone.jpg">0948141516</a>
+                    <li><a href="tel:+33948141516" class="bouton_lien bouton_telephone"><img
+                                src="img/telephone.jpg">0948141516</a>
                     </li>
                 </ul>
             </div>
@@ -60,25 +63,47 @@
                 Les Croisières
             </h2>
             <div class="categorie">
-            <a href="croisiere mediterranee.html" class="offre">
-                <figure>
-                    <img src="img/mediterranee.jpg" alt="mediterranee" title="mediterranee">
-                    <figcaption>
-                        Croisière Italie, Espagne, France
-                    </figcaption>
-                </figure>
-            </article>
-            <article class="offre img_factice">
-                <figure>
-                    <a href="croisiere mediterranee.html">Découvrir</a>
-                    <img src="img/mediterranee.jpg" alt="mediterranee" title="mediterranee">
-                    <figcaption>
-                        Croisière Italie, Espagne, France
-                        <a href="croisiere mediterranee.html">Découvrir</a>
-                    </figcaption>
-                </figure>
-            </article>
-        </div>          
+                <a href="croisiere mediterranee.html" class="offre">
+                    <figure>
+                        <img src="img/mediterranee.jpg" alt="mediterranee" title="mediterranee">
+                        <figcaption>
+                            Croisière Italie, Espagne, France
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="" class="offre">
+                    <figure>
+                        <img src="img/Kenai_Fjords_National_Park_3.jpg" alt="mediterranee" title="mediterranee">
+                        <figcaption>
+                            Croisière Alaska
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="" class="offre">
+                    <figure>
+                        <img src="img/mexique site-archeologique-tulum.jpg" alt="mediterranee" title="mediterranee">
+                        <figcaption>
+                            Croisière Mexique
+                        </figcaption>
+                    </figure>
+                </a>
+                <a href="" class="offre">
+                    <figure>
+                        <img src="img/kenya.jpg" alt="mediterranee" title="mediterranee">
+                        <figcaption>
+                            Croisière Kenya
+                        </figcaption>
+                    </figure>
+                </a>
+                <article class="offre img_factice">
+                    <figure>
+                        <img src="img/mexique site-archeologique-tulum.jpg" alt="mediterranee" title="mediterranee">
+                        <figcaption>
+                            Croisière Italie, Espagne, France
+                        </figcaption>
+                    </figure>
+                </article>
+            </div>
         </section>
         <div class="separation"></div>
         <section id="sejour">
@@ -86,27 +111,23 @@
                 Les Séjours
             </h2>
             <div class="categorie">
-            <article class="offre">
-                <figure>
-                    <a href="yucatan.html">Découvrir</a>
-                    <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
-                    <figcaption>
-                        Séjour au Yucatan
-                        <a href="yucatan.html">Découvrir</a>
-                    </figcaption>
-                </figure>
-            </article>
-            <article class="offre img_factice">
-                <figure>
-                    <a href="yucatan.html">Découvrir</a>
-                    <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
-                    <figcaption>
-                        Séjour au Yucatan
-                        <a href="yucatan.html">Découvrir</a>
-                    </figcaption>
-                </figure>
-            </article>
-        </div>              
+                <a href="yucatan.html" class="offre">
+                    <figure>
+                        <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
+                        <figcaption>
+                            Séjour au Yucatan
+                        </figcaption>
+                    </figure>
+                </a>
+                <article class="offre img_factice">
+                    <figure>
+                        <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
+                        <figcaption>
+                            Séjour au Yucatan
+                        </figcaption>
+                    </figure>
+                </article>
+            </div>
         </section>
         <div class="separation"></div>
         <section id="camping">
@@ -114,26 +135,23 @@
                 Les Campings
             </h2>
             <div class="categorie">
-            <article class="offre">
-                <figure>
-                    <a href="camping alaska.html">Découvrir</a>
-                    <img src="img/Etats-Unis camping.jpg" alt="alaska" title="alaska">
-                    <figcaption>
-                        Camping en Alaska
-                        <a href="camping alaska.html">Découvrir</a>
-                    </figcaption>
-                </figure>
-            </article>
-            <article class="offre img_factice">
-                <figure>
-                    <a href="camping alaska.html">Découvrir</a>
-                    <img src="img/Etats-Unis camping.jpg" alt="alaska" title="alaska">
-                    <figcaption>
-                        Camping en Alaska
-                        <a href="camping alaska.html">Découvrir</a>
-                    </figcaption>
-                </figure>
-            </article>
+                <a href="yucatan.html" class="offre">
+                    <figure>
+                        <img src="img/Etats-Unis camping.jpg" alt="alaska" title="alaska">
+                        <figcaption>
+                            Camping en Alaska
+                        </figcaption>
+                    </figure>
+                </a>
+                <article class="offre img_factice">
+                    <figure>
+                        <img src="img/Etats-Unis camping.jpg" alt="alaska" title="alaska">
+                        <figcaption>
+                            Camping en Alaska
+                        </figcaption>
+                    </figure>
+                </article>
+            </div>
         </section>
         <div class="separation"></div>
         <section id="visite_guidee">
@@ -141,26 +159,23 @@
                 Les Visites Guidées
             </h2>
             <div class="categorie">
-            <article class="offre">
-                <figure>
-                    <a href="chichen itza.html">Découvrir</a>
-                    <img src="img/El-Castillo-Chichen-Itza.jpg" alt="Chichen itza" title="chichen itza">
-                    <figcaption>
-                        Visite guidée de Chichen Itza
-                        <a href="chichen itza.html">Découvrir</a>
-                    </figcaption>
-                </figure>
-            </article>
-            <article class="offre img_factice">
-                <figure>
-                    <a href="chichen itza.html">Découvrir</a>
-                    <img src="img/El-Castillo-Chichen-Itza.jpg" alt="Chichen itza" title="chichen itza">
-                    <figcaption>
-                        Visite guidée de Chichen Itza
-                        <a href="chichen itza.html">Découvrir</a>
-                    </figcaption>
-                </figure>
-            </article>
+                <a href="yucatan.html" class="offre">
+                    <figure>
+                        <img src="img/El-Castillo-Chichen-Itza.jpg" alt="Chichen itza" title="chichen itza">
+                        <figcaption>
+                            Visite guidée de Chichen Itza
+                        </figcaption>
+                    </figure>
+                </a>
+                <article class="offre img_factice">
+                    <figure>
+                        <img src="img/El-Castillo-Chichen-Itza.jpg" alt="Chichen itza" title="chichen itza">
+                        <figcaption>
+                            Visite guidée de Chichen Itza
+                        </figcaption>
+                    </figure>
+                </article>
+            </div>
         </section>
     </main>
     <footer>
