--- a/croisiere.html
+++ b/croisiere.html
@@ -18,7 +18,7 @@
         </a>
         <div id="compte_agence">
             <a href="mon compte.html"><img src="img/contacts.png" alt="compte" title="compte">Mon compte</a>
-            <a href="#nous_trouver"><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
+            <a href="index.html#nous_trouver"><img src="img/geolocalisation.jpg" alt="geolocalisation" title="geolocalisation">Agences</a>
         </div>
         <a href=""><img src="img/telephone.jpg" alt="telephone" title="telephone">0948141516</a>
         <div class="break"></div>
