--- a/camping alaska.html
+++ b/camping alaska.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/croisiere mediterranee.css">
+    <link rel="stylesheet" href="CSS/camping alaska.css">
     <title>Yucantan</title>
 </head>
 
@@ -99,7 +99,7 @@
         <h2>
             Les points fort
         </h2>
-        <div>
+        <div id="info_complementaire">
             <p>Propriété d'autochtones d'Alaska à Glennallen avec des vues splendides</p>
             <p>En été, soirées dessert gratuit conviviales autour du feu de camp</p>
             <p>Parc national et réserve nationale de Wrangell-Saint-Élie à 10 min</p>
