legere modif index et creation de defilement auto js

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             Voyages de rêve
         </h1>
 
-        <div id="destination">
-            <article class="photos_destination">
+        <div id="destination" >
+            <article class="photos_destination carrousel1">
                 <figure>
                     <div>
                     <img src="img/mediterranee.jpg" alt="mediterranee" title="mediterranee">
@@ -80,7 +80,7 @@
                     </figcaption>
                 </figure>
             </article>
-            <article class="photos_destination">
+            <article class="photos_destination carrousel1">
                 <figure>
                     <div>
                     <img src="img/Alaska.webp" alt="Alaska" title="Alaska">
@@ -92,7 +92,7 @@
                     </figcaption>
                 </figure>
             </article>
-            <article class="photos_destination">
+            <article class="photos_destination carrousel1">
                 <figure>
                     <div>
                     <img src="img/El-Castillo-Chichen-Itza.jpg" alt="Chichen Itza" title="Chichen Itza">
@@ -103,7 +103,7 @@
                     </figcaption>
                 </figure>
             </article>
-            <article class="photos_destination">
+            <article class="photos_destination carrousel1">
                 <figure>
                     <div>
                     <img src="img/le yucatan jusqu'à l'le holbox.jpg" alt="yucatan" title="yucatan">
@@ -114,7 +114,7 @@
                     </figcaption>
                 </figure>
             </article>
-            <article class="photos_destination">
+            <article class="photos_destination carrousel1">
                 <figure>
                     <div>
                     <img src="img/iles maurice.jpg" alt="Ile maurice" title="Ile maurice">
@@ -125,7 +125,7 @@
                     </figcaption>
                 </figure>
             </article>
-            <article id="img_factice" class="photos_destination">
+            <article id="img_factice" class="photos_destination carrousel">
                 <figure>
                     <div>
                     <img src="img/iles maurice.jpg" alt="Ile maurice" title="Ile maurice">
@@ -178,4 +178,5 @@
     </footer>
 </body>
 <script src="JS/header.js"></script>
+<script src="JS/index.js"></script>
 </html>
