ajout devis, changement header, liens bon plans repares

--- a/bons plans.html
+++ b/bons plans.html
@@ -135,7 +135,7 @@
                 Les Campings
             </h2>
             <div class="categorie">
-                <a href="yucatan.html" class="offre">
+                <a href="camping alaska.html" class="offre">
                     <figure>
                         <img src="img/Etats-Unis camping.jpg" alt="alaska" title="alaska">
                         <figcaption>
@@ -159,7 +159,7 @@
                 Les Visites Guidées
             </h2>
             <div class="categorie">
-                <a href="yucatan.html" class="offre">
+                <a href="chichen itza.html" class="offre">
                     <figure>
                         <img src="img/El-Castillo-Chichen-Itza.jpg" alt="Chichen itza" title="chichen itza">
                         <figcaption>
