--- a/camping alaska.html
+++ b/camping alaska.html
@@ -108,7 +108,7 @@
         <aside>
         <h3>Intéressé(es) ?</h3>
         <button>
-            <a href="devis.html" target="_blank"> Je demande un devis</a>
+            <a href="devis alaska.html" target="_blank"> Je demande un devis</a>
          </button>
         </aside>
 
