--- a/devis yucatan.html
+++ b/devis yucatan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/devis.css">
+    <link rel="stylesheet" href="css/devis yucatan.css">
     <title>Durée séjour</title>
 </head>
 <body>
@@ -92,6 +92,16 @@
             </optgroup>
             </select>
         </fieldset>
+        <fieldset id = "choix_multiple">
+            <legend>Activités supplémentaires</legend>
+            <label for="activites_complementaires">Faites vos choix</label>
+            <select name="activites_complementaires" id="activites_complementaires" multiple>
+                <option value="ka'an">Excusrsion à Sian Ka'an</option>
+                <option value="yoga">Atelier Yoga à Tulum</option>
+                <option value="plongee">Atelier de plongée à Cozumel</option>
+                <option value="exploration">Exploration avec guide du Calakmul</option>
+            </select>
+        </fieldset>
         <fieldset>
             <legend>Votre période</legend>
             <label for="date">Renseignez vos dates :</label><br>
@@ -124,21 +134,21 @@
     
     <div class="container">
         <div class="activites">
-        <h1>Que voir, que faire dans la région du Chocó en Colombie ?</h1>
+        <h1>Que voir, que faire dans la région du Yucatan ?</h1>
         </div>
-        <div class="item">Rencontrer les indigènes Embera et les communautés noires locales: <br><hr> <br><hr> 100 €</div>
-        <div class="item">Admirer la danse des baleines dans l'Océan Pacifique : <br><hr> <br><hr> 200 €</div>
-        <div class="item">Un petit tour en lancha et en mototaxi ! : <br><hr>  <br><hr> 370 €</div>
-        <div class="item">Un endroit idéal pour les amateurs de surf : <br><hr> <br><hr> 460 €</div>
+        <div class="item">Excusrsion à Sian Ka'an: <br><hr> <br><hr> 80 €</div>
+        <div class="item">Atelier Yoga à Tulum : <br><hr> <br><hr> 50 €</div>
+        <div class="item">Atelier de plongée à Cozumel : <br><hr>  <br><hr> 150 €</div>
+        <div class="item">Exploration avec guide du Calakmul : <br><hr> <br><hr> 200 €</div>
         </div>
         <aside class="item1">
             <h2>Carte choco</h2>
             <figure class="carte_choco">
                 <div>
-                <img src="img/Carte_Choco_avec_villes.png" alt="carte_choco">
+                <img src="img/carte yucatan.jpg" alt="carte_choco">
                 </div>
             <figcaption>
-                <p> De Bogota à Medellin, de Carthagène des indes aux paysages de l'Amazonie,<br> partez en voyage en Colombie à la découverte d'une autre Amérique du Sud.</p>
+                <p> Avec ses plages paradisiaques, grands sites archéologiques, villes coloniales et sites naturels à couper le souffle, nul doute que vous aurez de quoi faire pendant votre séjour!</p>
             </figcaption>
             </figure>
         </aside>
