--- a/devis.html
+++ b/devis.html
@@ -92,6 +92,16 @@
             </optgroup>
             </select>
         </fieldset>
+        <fieldset id = "choix_multiple">
+            <legend>Activités supplémentaires</legend>
+            <label for="activites_complementaires">Faites vos choix</label>
+            <select name="activites_complementaires" id="activites_complementaires" multiple>
+                <option value="rencontre">Rencontrer les indigènes Embera et les communautés noires locales</option>
+                <option value="baleines">Admirer la danse des baleines dans l'Océan Pacifique</option>
+                <option value="lancha">Un petit tour en lancha et en mototaxi</option>
+                <option value="surf">Un endroit idéal pour les amateurs de surf</option>
+            </select>
+        </fieldset>
         <fieldset>
             <legend>Votre période</legend>
             <label for="date">Renseignez vos dates :</label><br>
