--- a/yucatan.html
+++ b/yucatan.html
@@ -113,7 +113,7 @@
         <aside>
         <h3>Intéressé(es) ?</h3>
         <button>
-            <a href="devis.html" target="_blank"> Je demande un devis</a>
+            <a href="devis yucatan.html" target="_blank"> Je demande un devis</a>
          </button>
         </aside>
 
