--- a/croisiere mediterranee.html
+++ b/croisiere mediterranee.html
@@ -116,7 +116,7 @@
         <aside>
         <h3>Intéressé(es) ?</h3>
         <button>
-            <a href="devis.html" target="_blank"> Je demande un devis</a>
+            <a href="devis mediterranee.html" target="_blank"> Je demande un devis</a>
          </button>
         </aside>
 
