--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div>
                     <img src="img/iles maurice.jpg" alt="Ile maurice" title="Ile maurice">
                 </div><figcaption>
-                    <p>Infos</p>
+                    <p>Séjour Iles maurice</p>
                     <p>Nbre Personnes : 10 maximum</p>
                     <a>Prix (Voir detail)</a>
                     </figcaption>
